# discord-twitch-schedule-sync

./: Cargo.toml  README.md
docker/: build.dockerfile
src/: config.rs  main.rs  utils.rs
src/api/: discord.rs  twitch.rs
