[package]
name = "discord-twitch-schedule-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
icalendar = "0.16.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.5"
iso8601-timestamp = "0.2.17"
